--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="nav-extended green accent-1">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo"><img class="logobarra" src="img/viajes1.jpg" alt="Viajes"></a>
+        <a href="#" class="brand-logo"><img class="logobarra hide-on-med-and-down" src="img/viajes1.jpg" alt="Viajes"></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a class="black-text" href="#">Inicio</a></li>
@@ -26,20 +26,58 @@
         </ul>
       </div>
     </nav>
-    <div class="s2 m2 l2 col blue-grey lighten-5 columna-grupos push-s10">
-      <div class="collection">
-        <a class="collection-item avatar">
-          <img src="ico/ico-Facebook.png" alt="Face" class="circle">
-        </a>
-        <a class="collection-item avatar">
-          <img src="ico/ico-Instagram.png" alt="Insta" class="circle">
-        </a>
-        <a class="collection-item avatar">
-          <img src="ico/ico-Pinterest.png" alt="Pint" class="circle">
-        </a>
-        <a class="collection-item avatar">
-          <img src="ico/ico-twitter.png" alt="twit" class="circle">
-        </a>
+    <div class="row">
+      <div class="col l12 m12 s12">
+        <h2 class="center-align">Siente la libertad de ser independiente!</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="s1 m1 l1 col blue-grey lighten-5">
+        <div class="collection">
+          <a class="collection-item avatar">
+            <img src="ico/ico-Facebook.png" alt="Face" class="circle">
+          </a>
+          <a class="collection-item avatar">
+            <img src="ico/ico-Instagram.png" alt="Insta" class="circle">
+          </a>
+          <a class="collection-item avatar">
+            <img src="ico/ico-Pinterest.png" alt="Pint" class="circle">
+          </a>
+          <a class="collection-item avatar">
+            <img src="ico/ico-twitter.png" alt="twit" class="circle">
+          </a>
+        </div>
+      </div>
+      <div class="s11 m11 l11 col white z-depth-1">
+        <div class="row">
+          <div class="s12 m12 l12 col white">
+            <div class="row">
+              <div class="card-panel cyan lighten-2">
+                <h3>Paraisos y Lugares</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="s12 m6 l3 col">
+                <img src="img/Paris1.png" alt="Paris" class="responsive-img z-depth-4">
+              </div>
+              <div class="row">
+                <div class="s12 m3 l3 col">
+                  <img src="img/Colombia.jpg" alt="Colombia" class="responsive-img z-depth-4">
+                </div>
+                <div class="s12 m3 l4 col">
+                  <img src="img/Roma.jpg" alt="Roma" class="responsive-img z-depth-4">
+                </div>
+                <div class="row">
+                  <div class="s12 m3 l3 col">
+                    <img src="img/Peru.jpg" alt="Peru" class="responsive-img z-depth-4">
+                  </div>
+                  <div class="s12 m3 l4 col">
+                    <img src="img/India.jpg" alt="India" class="responsive-img z-depth-4">
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
