--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="row">
       <div class="col l12 m12 s12">
-        <h2 class="center-align">Siente la libertad de ser independiente!</h2>
+        <h2 class="center-align flow-text">Siente la libertad de ser independiente!</h2>
       </div>
     </div>
     <div class="row">
@@ -53,7 +53,7 @@
           <div class="s12 m12 l12 col white">
             <div class="row">
               <div class="card-panel cyan lighten-2">
-                <h3>Paraisos y Lugares</h3>
+                <h3 class="flow-text">Paraisos y Lugares</h3>
               </div>
             </div>
             <div class="row">
@@ -74,12 +74,76 @@
                   <div class="s12 m3 l4 col">
                     <img src="img/India.jpg" alt="India" class="responsive-img z-depth-4">
                   </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    <div class="row">
+      <div class="s12 m10 l9 col white z-depth-1">
+        <h2 class="flow-text">Un destino Americano</h2>
+        <h4 class="flow-text">Lugar: Estados Unidos</h4>
+        <div class="row">
+          <div class="s12 m6 l4 col">
+            <img src="img/usa.jpg" alt="usa" class="responsive-img">
+          </div>
+          <div class="s12 m6 l8 col">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="col">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="s12 col">
+            <p>Escribe un comentario:</p>
+            <div class="input-flied col s12">
+              <textarea name="Comentario" class="materialize-textarea" placeholder="Escribe aqui."></textarea>
+            </div>
+            <button type="button" name="button" class="waves-effect waves-light btn">Adicionar</button>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="s12 col">
+            <ul class="collection with-header">
+              <li class="collection-header">Comentarios</li>
+              <li class="collection-item">
+                <div class="chip">
+                  <img src="img/hombre.png">
+                  Usuario1
+                </div>
+                <div class="card-panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </li>
+              <li class="collection-item">
+                <div class="chip">
+                  <img src="img/hombre.png">
+                  Usuario2
+                </div>
+                <div class="card-panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="s12 m2 l3 col white z-depth-1">
+        <h5>Autor del Blog</h5>
+        <div class="card-panel">
+          <div class="row center-align">
+            <img src="img/UsuarioHombre.jpg" alt="Autor" class="circle responsive-img">
+          </div>
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
