--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       </div>
     </div>
     <div class="row">
-      <div class="s1 m1 l1 col blue-grey lighten-5">
+      <div class="s1 m1 l1 col blue-grey lighten-5 hide-on-med-and-down">
         <div class="collection">
           <a class="collection-item avatar">
-            <img src="ico/ico-Facebook.png" alt="Face" class="circle">
+            <img src="ico/ico-Facebook.png" alt="Face" class="circle responsive-img">
           </a>
           <a class="collection-item avatar">
-            <img src="ico/ico-Instagram.png" alt="Insta" class="circle">
+            <img src="ico/ico-Instagram.png" alt="Insta" class="circle responsive-img">
           </a>
           <a class="collection-item avatar">
-            <img src="ico/ico-Pinterest.png" alt="Pint" class="circle">
+            <img src="ico/ico-Pinterest.png" alt="Pint" class="circle responsive-img">
           </a>
           <a class="collection-item avatar">
-            <img src="ico/ico-twitter.png" alt="twit" class="circle">
+            <img src="ico/ico-twitter.png" alt="twit" class="circle responsive-img">
           </a>
         </div>
       </div>
@@ -61,17 +61,17 @@
                 <img src="img/Paris1.png" alt="Paris" class="responsive-img z-depth-4">
               </div>
               <div class="row">
-                <div class="s12 m3 l3 col">
+                <div class="s12 m6 l3 col">
                   <img src="img/Colombia.jpg" alt="Colombia" class="responsive-img z-depth-4">
                 </div>
-                <div class="s12 m3 l4 col">
+                <div class="s12 m6 l4 col">
                   <img src="img/Roma.jpg" alt="Roma" class="responsive-img z-depth-4">
                 </div>
                 <div class="row">
-                  <div class="s12 m3 l3 col">
+                  <div class="s12 m6 l3 col">
                     <img src="img/Peru.jpg" alt="Peru" class="responsive-img z-depth-4">
                   </div>
-                  <div class="s12 m3 l4 col">
+                  <div class="s12 m6 l4 col">
                     <img src="img/India.jpg" alt="India" class="responsive-img z-depth-4">
                   </div>
                 </div>
