--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <div class="row">
       <div class="s1 m1 l1 col blue-grey lighten-5 hide-on-med-and-down">
         <div class="collection">
-          <a class="collection-item avatar">
+          <a href="#" class="collection-item avatar">
             <img src="ico/ico-Facebook.png" alt="Face" class="circle responsive-img">
           </a>
-          <a class="collection-item avatar">
+          <a href="#" class="collection-item avatar">
             <img src="ico/ico-Instagram.png" alt="Insta" class="circle responsive-img">
           </a>
-          <a class="collection-item avatar">
+          <a href="#" class="collection-item avatar">
             <img src="ico/ico-Pinterest.png" alt="Pint" class="circle responsive-img">
           </a>
-          <a class="collection-item avatar">
+          <a href="#" class="collection-item avatar">
             <img src="ico/ico-twitter.png" alt="twit" class="circle responsive-img">
           </a>
         </div>
@@ -132,6 +132,47 @@
             </ul>
           </div>
         </div>
+        <br>
+        <h2 class="flow-text">La ciudad del amor</h2>
+        <h4 class="flow-text">Lugar: Paris</h4>
+        <div class="row">
+          <div class="s12 m6 l4 col">
+            <img src="img/Paris.jpg" alt="Paris" class="responsive-img">
+          </div>
+          <div class="s12 m6 l8 col">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="col">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="s12 col">
+            <p>Escribe un comentario:</p>
+            <div class="input-flied col s12">
+              <textarea name="Comentario" class="materialize-textarea" placeholder="Escribe aqui."></textarea>
+            </div>
+            <button type="button" name="button" class="waves-effect waves-light btn">Adicionar</button>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="s12 col">
+            <ul class="collection with-header">
+              <li class="collection-header">Comentarios</li>
+              <li class="collection-item">
+                <div class="chip">
+                  <img src="img/mujer.png">
+                  Usuario2
+                </div>
+                <div class="card-panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="s12 m2 l3 col white z-depth-1">
         <h5>Autor del Blog</h5>
@@ -140,7 +181,7 @@
             <img src="img/UsuarioHombre.jpg" alt="Autor" class="circle responsive-img">
           </div>
           <div class="card-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="center-align flow-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
